--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity"
+            android:screenOrientation="landscape">
+        </activity>
         <activity
             android:name=".RegistrationActivity"
             android:label="@string/reglabel"
@@ -49,8 +51,10 @@
         <activity
             android:name=".ReviewActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="landscape"
             android:label="@string/title_activity_review"
-            android:theme="@style/FullscreenTheme"></activity>
+            android:noHistory="true"
+            android:theme="@style/FullscreenTheme"/>
     </application>
 
 </manifest>
