--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:27.1.0'
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
