--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,12 +29,12 @@
             android:label="@string/reglabel"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".LandingActivity"
+            android:name=".LearningActivity"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="landscape" />
         <activity
             android:name=".PaperActivity"
-            android:parentActivityName=".LandingActivity"
+            android:parentActivityName=".LearningActivity"
             android:screenOrientation="landscape" />
         <activity android:name=".EnrollRequestActivity"
             android:screenOrientation="landscape"
