--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,10 +30,12 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".LearningActivity"
+            android:label="@string/courselabel"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="landscape" />
         <activity
             android:name=".PaperActivity"
+            android:label="@string/paperlabel"
             android:parentActivityName=".LearningActivity"
             android:screenOrientation="landscape" />
         <activity android:name=".EnrollRequestActivity"
